--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "styled-components": "^4.3.2",
+    "svg-react-loader": "^0.4.6",
     "typescript": "^3.6.3"
   },
   "scripts": {
