--- a/api/Pipfile
+++ b/api/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-black = "*"
+black = "==19.3b0"
 pysnooper = "*"
 pytest-sanic = "*"
 faker = "*"
