--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
       python: '3.7'
       before_install:
         - 'cd api'
-        - 'sudo apt-get install -y pipenv'
+        - 'pip install pipenv'
       install:
         - 'pipenv install'
       script:
