--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,10 @@ matrix:
     - name: 'API'
       language: python
       python: '3.7'
-      env: 'PIPENV_IGNORE_VIRTUALENVS=1'
       before_install:
         - 'cd api'
       install:
-        - 'pipenv install'
+        - 'pipenv install --dev'
       script:
         - 'pipenv run black . --check'
         # - 'scripts/test_dev.sh'
