--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "install": "^0.13.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-feather": "^2.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
