--- a/api/Pipfile
+++ b/api/Pipfile
@@ -20,6 +20,7 @@ cerberus = "*"
 # uvicorn = "==0.7.*"
 sanic-jwt-extended = "*"
 hypercorn = {extras = ["uvloop"],version = "*"}
+sanic-cors = "*"
 
 [requires]
 python_version = "3.7"
