--- a/web/package.json
+++ b/web/package.json
@@ -12,11 +12,12 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^4.1.19",
+    "immer": "^4.0.0",
     "install": "^0.13.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
     "react-feather": "^2.0.3",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
