--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.4",
     "@types/node": "^12.7.5",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -15,6 +16,7 @@
     "@types/styled-components": "^4.1.19",
     "immer": "^4.0.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-feather": "^2.0.3",
