Add CORS header to api

--- a/web/firebase.json
+++ b/web/firebase.json
@@ -3,11 +3,15 @@
     "public": "build",
     "headers": [
       {
-        "source": "/**",
+        "source": "**",
         "headers": [
           {
             "key": "Cache-Control",
             "value": "no-cache, no-store, must-revalidate"
+          },
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
           }
         ]
       }
