Update back-end domain and min/max for front-end's options/questions (#179)
* Add max constraints for options/questions

* Hide Delete option/question buttons when there is only 1

* Use immer for quiz-create so initial state is not mutated.

* Update API URL, SSL certificate and add CORS header to error responses.

--- a/web/firebase.json
+++ b/web/firebase.json
@@ -3,7 +3,7 @@
     "public": "build",
     "headers": [
       {
-        "source": "/**",
+        "source": "**",
         "headers": [
           {
             "key": "Cache-Control",
